fix(components): fix shell layout navigation scrollbar behavior in overflowing collapsed state

--- a/packages/swirl-components/src/components/swirl-shell-layout/swirl-shell-layout.css
+++ b/packages/swirl-components/src/components/swirl-shell-layout/swirl-shell-layout.css
@@ -318,7 +318,7 @@
   }
 
   @media (--from-desktop) {
-    position: static;
+    position: relative;
     max-width: none;
     padding-top: 0;
     padding-right: var(--s-space-4);
